src/polychem/snapshots/smithereens__polychem__chemical_database__tests__uppercase_particle_symbol.snap
---
source: src/polychem/chemical_database.rs
expression: out
---
  × error parsing KDL

Error:   × expected a single lowercase ASCII letter, got "P"
  ╰─▶ expected a single lowercase ASCII letter, got "P"
   ╭─[test:1:1]
 1 │ P "Proton" {
   · ┬
   · ╰── invalid value
 2 │   mass 1.007276466621
   ╰────

